Fix cms top input for add page alignment

--- a/less/modules/datagrid.less
+++ b/less/modules/datagrid.less
@@ -152,6 +152,10 @@
 		font-weight: bold;
 		margin-top: 0;
 	}
+	input {
+		margin-bottom: 16px;
+		margin-right: 0;
+	}
 	.btn {
 		width: 220px;
 		margin-right: 16px;
